fixed spacing

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -317,7 +317,7 @@ ol.messages #paginated.loading {
 
 #avatar-pings img {
     height: 30px;
-    margin: 2px;
+    margin: 2px 2px 1px 2px;
     width: 30px;
 }
 
